<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XMPP Remote Robot</string>
    <string name="servicestart">Service Start</string>
    <string name="servicestop">Service Stop</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log">Show Log</string>
    <string name="clear_msg">Clear Msg</string>
    <string name="clear_log">Clear Log</string>
    <string name="loginstatus">Status: </string>
    <string name="loginstats_debug">Debug!</string>
    <string name="loginstatus_not_logged_in">Not logged in</string>
    <string name="loginstatus_successful">Successful</string>
    <string name="loginstatus_set_incomplete">Set incomplete</string>
    <string name="loginstatus_notified_address_is_not_in_friend_list">Notified Address Incorrect</string>
    <string name="loginstatus_login_failure">Login Failure</string>
    <string name="loginstatus_connection_failure">Connection Failure</string>
    <string name="loginstatus_logging">Logging&#8230;</string>
    <string name="preference_notified_address">Address to notify</string>
    <string name="preference_notified_address_summary">Enter your notify address</string>
    <string name="preference_login_address">Address to login</string>
    <string name="preference_login_address_summary">Enter your login address</string>
    <string name="preference_password">Login password</string>
    <string name="preference_password_summary">Enter your login password</string>
    <string name="preference_resource">Jabber Resource</string>
    <string name="preference_resource_summary">Enter Jabber Resource</string>
    <string name="preference_is_custom_server">Custom Server</string>
    <string name="preference_is_custom_server_summary">Check if you want custom server</string>
    <string name="preference_server_settings">Server Settings</string>
    <string name="preference_server_host_summary">Enter Server Host</string>
    <string name="preference_server_host">Server Host</string>
    <string name="preference_server_port_summary">Enter Server Port</string>
    <string name="preference_server_port">Server Port</string>
    <string name="preference_server_domain_summary">Enter Server Domain</string>
    <string name="preference_server_domain">Server Domain</string>
    <string name="preference_is_start_at_boot">Start at Boot</string>
    <string name="preference_is_start_at_boot_summary">Check if you want App to start at boot</string>
    <string name="preference_is_auto_reconnect_when_connection_fail">Auto Reconnect When Connection Fail</string>
    <string name="preference_is_auto_reconnect_when_connection_fail_summary">Check if you want App reconnect when connection fail</string>
    <string name="preference_is_auto_reconnect_when_net_Status_change">Auto Reconnect When Net Status Change</string>
    <string name="preference_is_auto_reconnect_when_net_status_change_summary">Check if you want App reconnect when net status change</string>
    <string name="preference_notification_type">Set Notification Type</string>
    <string name="preference_notification_type_summary">Set Notification Type When App Do Login</string>
    <string name="buttonsendmessage">Send</string>
    <string name="autocompletetextviewsendmessage_hint">Send Message</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_log">Log</string>
    <string name="github">https://github.com/AnyOfYou/Android-Xmpp-Remote-Robot</string>
    <string name="author">"Author : "</string>
    <string name="author_value">Dary</string>
    <string name="version">"Version : "</string>
    <string name="find_more">This is an open source project,you can find more information from here :</string>
    <string name="email">"Email : "</string>
    <string name="email_value">anyofyou@gmail.com</string>
    <string name="preference_debug_mode_summary">DeBug Mode</string>
    <string name="preference_debug_mode">DeBug Mode</string>
    <string name="preference_command_setting">Command Setting</string>
    <string name="preference_sms_command_display_items_number">SMS Command Display Items Number</string>
    <string name="preference_sms_command_display_items_number_summary">Set SMS Command Display Items Number,Set 0 To Show All Items</string>
    <string name="preference_calllog_command_display_items_number">Calllog Command Display Items Number</string>
    <string name="preference_calllog_command_display_items_number_summary">Set Calllog Command Display Items Number,Set 0 To Show All Items</string>
    <string name="preference_others_settings">Others Settings</string>
    <string name="preference_command_settings">Command Settings</string>
    <string name="preference_connect_settings">Connect Setting</string>
    <string name="preference_auto_switch_preferences_between_different_network_summary">Auto Switch Preferences Between Different Network</string>
    <string name="preference_auto_switch_preferences_between_different_network">Auto Switch Preferences Between Different Network</string>
    <string name="preference_preferences_setting">Preferences Setting</string>
    <string name="preference_connection_fail_reconnect_timeout_summary">Connection Fail Reconnect Timeout (min)</string>
    <string name="preference_connection_fail_reconnect_timeout">Connection Fail Reconnect Timeout</string>

</resources>